tests/ui/issues/issue-51874.rs
fn main() {
    let a = (1.0).pow(1.0); //~ ERROR can't call method `pow` on ambiguous numeric type
}
